tests/snapshots/tui_carry_conflict__conflict_dialog_after_a_failed_resume.snap
---
source: tests/tui_carry_conflict.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::conflict::render_conflict(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   Refactor parser module                                               ",
        "def456gh   Add feature X                                                        ",
        "         ┌ Fixup Conflict ────────────────────────────────────────────┐         ",
        "         │                                                            │         ",
        "         │ Working-tree conflict after fixup                          │         ",
        "         │                                                            │         ",
        "         │ ! Could not finish — nothing was lost                      │         ",
        "         │ This would overwrite untracked files:                      │         ",
        "         │ device/limits/src/monkey_tests.rs. Move, delete, or commit │         ",
        "         │ them first.                                                │         ",
        "         │                                                            │         ",
        "         │ The fixup itself is done and your unstaged changes are     │         ",
        "         │ still set aside. Clear what is named above, then press     │         ",
        "         │ Enter to try again — or press Esc to unwind the whole      │         ",
        "         │ fixup and get your changes back unchanged.                 │         ",
        "         │                                                            │         ",
        "         │                 Enter Try again   Esc Abort                │         ",
        "         │                                                            │         ",
        "         └────────────────────────────────────────────────────────────┘         ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 3, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 4, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 44, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 5, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 48, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: Green, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 45, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 49, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 18, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 18, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 19, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
